src/styles/base.pcss
@import "./fonts/recursive.css";
@import "./fonts/fafo-nihongo.css";

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  @custom-media --small (min-width: theme("screens.sm"));

  html[data-theme="light"] {
    --color-fill: 239, 241, 245;
    --color-text-base: 76, 79, 105;
    --color-accent: 30, 102, 245;
    --color-card: 172, 176, 190;
    --color-card-muted: 188, 192, 204;
    --color-border: 124, 127, 147;
    --color-highlight: 223, 142, 29;
  }

  :root,
  html[data-theme="dark"] {
    --color-fill: 36, 39, 58;
    --color-text-base: 202, 211, 245;
    --color-accent: 138, 173, 244;
    --color-card: 91, 96, 120;
    --color-card-muted: 73, 77, 100;
    --color-border: 147, 154, 183;
    --color-highlight: 238, 212, 159;
  }

  #sun-svg, html[data-theme="dark"] #moon-svg {
    display: none;
  }

  #moon-svg, html[data-theme="dark"] #sun-svg {
    display: block;
  }

  body {
    display: flex;
    min-height: 100svh;
    flex-direction: column;
    font-family: theme("fontFamily.sans");
    background-color: rgb(var(--color-fill));
    color: rgb(var(--color-text-base));
    & ::selection {
      background-color: rgb(var(--color-accent), 70%);
      color: rgb(var(--color-fill));
    }
  }

  section, footer {
    margin-left: auto;
    margin-right: auto;
    max-width: theme("maxWidth.3xl");
    padding-left: theme("spacing.4");
    padding-right: theme("spacing.4");
  }

  a {
    transition: color 0.1s linear;
    outline-width: 2px;
    outline-offset: 1px;
    outline-color: rgb(var(--color-accent));
    &:focus-visible {
      text-decoration-line: none;
      outline-style: dashed;
    }
  }
  
  svg {
    display: inline-block;
    height: theme("spacing.6");
    width: theme("spacing.6");
    fill: rgb(var(--color-text-base));
    &:hover { fill: rgb(var(--color-accent)); }
    &.icon-tabler {
      display: inline-block;
      height: theme("spacing.6");
      width: theme("spacing.6");
      transform: scale(125%);
      fill: transparent;
      stroke: currentColor;
      stroke-width: 2;
      opacity: 90%;
      @media (min-width: 640px) { transform: scale(110%); }
    }
  }

  .prose {
    & :is(h1, h2, h3, h4, h5, h6) {
      margin-bottom: theme("spacing.3");
      color: rgb(var(--color-text-base));
    }

    & p {
      color: rgb(var(--color-text-base));
    }

    & a {
      word-break: break-word;
      color: rgb(var(--color-text-base));
      text-decoration-style: solid;
      text-underline-offset: 4px;
      &:hover { color: rgb(var(--color-accent)); }

      &[data-footnote-ref] {
        text-underline-offset: 1px;
      }
  
      &[data-footnote-backref] {
        color: rgb(var(--color-accent));
        text-decoration: none;
      }
    }

    & blockquote {
      font-style: normal;
      word-break: break-words;
      border-left-color: rgb(var(--color-accent), 50%);
      opacity: 80%;
    }

    & figcaption {
      font-style: italic;
      text-align: center;
      color: rgb(var(--color-text-base));
      opacity: 70%;
    }

    & mark {
      border-radius: theme("borderRadius.DEFAULT");
      padding: 0.2rem;
      background-color: rgb(var(--color-highlight));
      color: rgb(var(--color-fill));
    }

    & strong {
      color: rgb(var(--color-text-base));
      font-weight: theme("fontWeight.extrabold");
    }
    
    & pre {
      background-color: rgb(var(--color-card), 75%);
    }

    & :not(pre) > code {
      background-color: rgb(var(--color-card));
      border-radius: theme("borderRadius.DEFAULT");
      padding: theme("spacing.1");
      word-break: break-words;
      &::before, &::after { content: none; }
    }

    & ol {
      color: rgb(var(--color-text-base));
    }

    & ul {
      overflow-x: clip;
      color: rgb(var(--color-text-base));
    }

    & li::marker {
      color: rgb(var(--color-accent));
    }

    & table {
      color: rgb(var(--color-text-base));
    }

    & th, & td {
      border-width: 1px;
      border-color: rgb(var(--color-border));

      &[align="left"] {
        text-align: left;
        padding-left: calc(4em / 7);
      }
  
      &[align="center"] {
        text-align: center;
      }
      
      &[align="right"] {
        text-align: right;
        padding-right: calc(4em / 7);
      }
    }

    & img {
      margin: theme("spacing.2") auto;
      border-width: 2px;
      border-color: rgb(var(--color-border));
      border-radius: theme("borderRadius.lg");
    }

    & hr {
      border-color: rgb(var(--color-border));
    }

    & h2#table-of-contents {
      margin-bottom: theme("spacing.2");
      & + p { display: none; }
    }

    & details {
      display: inline-block;
      cursor: pointer;
      user-select: none;
      color: rgb(var(--color-text-base));
    }

    & summary {
      outline: 2px solid transparent;
      outline-offset: 2px;
    }
  }
  
  /* MARK: Scrollbar */
  html {
    overflow-y: scroll;

    &::-webkit-scrollbar {
      width: theme("spacing.3");
    }

    &::-webkit-scrollbar-track { display: none; }
  
    &::-webkit-scrollbar-thumb {
      background-color: rgb(var(--color-card));
      border-radius: theme("borderRadius.md");
      &:hover { background-color: rgb(var(--color-card-muted)); }
    }
  }

  /* MARK: Code Blocks & Syntax Highlighting */
  pre:has(code) {
    border-width: 1px;
    border-color: rgb(var(--color-border));
    white-space: pre;
  }

  html[data-theme="dark"] {
    & pre:has(code),
    & pre:has(code) span {
      color: var(--shiki-dark) !important;
      background-color: var(--shiki-dark-bg) !important;
      font-style: var(--shiki-dark-font-style) !important;
      font-weight: var(--shiki-dark-font-weight) !important;
      text-decoration: var(--shiki-dark-text-decoration) !important;
    }
  }
}

